# study-like-animal-crossing-cpp-server

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh
dbmig/: Dockerfile  package.json  tsconfig.json
dbmig/config/: botClientApp.TownRandomMove.json5  database.migrate.json
dbmig/migrations/auth/: 20210411103103-create-accounts-table.js  20210411103707-create-pub-ids-world-users-table.js
dbmig/migrations/auth/sqls/: 20210419122446-add-create-time-utc-to-accout-table-down.sql
dbmig/migrations/user/sqls/: 20210411104411-create-users-soft-data-table-down.sql  20210411104411-create-users-soft-data-table-up.sql  20210426111044-create-states-table-down.sql  20210426111044-create-states-table-up.sql
dbmig/procedures/auth/: mp_a_account_create.sql  mp_a_account_load.sql  mp_a_pub_id_create.sql  mp_a_world_user_load_user_id.sql
dbmig/procedures/user/: mp_u_state_update_last_login_time_utc_and_is_online.sql  mp_u_user_create.sql  mp_u_user_load_id.sql
dbmig/src/botClientApp/: botClient.ts  botClientApp.ts  botConf.ts  botConnection.ts  botReqSenders.ts
dbmig/src/botClientApp/botScenarios/: botBehaviorCommonNode.ts  botScenarioInfiniteLoopReconnect.ts
dbmig/src/migrate/: index.ts
dbmig/src/spapply/: index.ts
dbmig/src/type/: node.d.ts
docker/dev/: docker-compose.yml
docker/dev/mysql/: initdb.sql
docker/dev/redis/: redis.conf
lib/fmt/include/fmt/: format.h
lib/soci/include/soci/: soci-backend.h  soci-platform.h
lib/soci/include/soci/mysql/: soci-mysql.h
lib/soci/src/backends/mysql/: session.cpp  statement.cpp
lib/soci/src/core/: statement.cpp
node/: .gitignore
node/config/: botClientApp_sample.json5  database.create.json
node/migrations/auth/: 20210419122446-add-create-time-utc-to-accout-table.js
node/migrations/auth/sqls/: 20210411103103-create-accounts-table-down.sql  20210411103103-create-accounts-table-up.sql  20210411103707-create-pub-ids-world-users-table-down.sql  20210411103707-create-pub-ids-world-users-table-up.sql  20210419122446-add-create-time-utc-to-accout-table-up.sql
node/migrations/user/: 20210411104411-create-users-soft-data-table.js  20210426111044-create-states-table.js
node/procedures/auth/: mp_a_account_update_is_online_and_last_login_time_utc.sql  mp_a_pub_id_load.sql
node/procedures/user/: mp_u_user_load.sql
node/src/botClientApp/: botCryptoContext.ts  botEnums.ts  botLogic.ts  const.ts
node/src/botClientApp/botScenarios/: botScenarioTownRandomMove.ts
node/src/deploy/: migrateRdb.ts
node/src/migrate/: createMigration.ts
node/src/spextract/: index.ts
scripts/dev-vm/: docker_bootstrap.sh  ubuntu_bootstrap.sh
service_layout/: dev.json5
src/: CMakeLists.txt  clientHandler.cpp  clientHandler.h  global.h  main.cpp  server.cpp  server.h  serverInstance.cpp  serverInstance.h  world.cpp  world.h
src/actor/: actor.cpp  actor.h  pawn.cpp  pawn.h  player.cpp  player.h
src/middleware/: logger.cpp  logger.h
src/osLib/: byteBuffer.cpp  byteBuffer.h  criticalSection.cpp  criticalSection.h  listenServer.cpp  listenServer.h  network.cpp  network.h  networkManager.cpp  networkManager.h  tcpConnection.cpp  tcpConnection.h  thread.cpp  thread.h  tsQueue.h  wEvent.cpp  wEvent.h
src/packetHandler/: CMakeLists.txt  crypto.cpp  crypto.h  packetHandler.cpp  packetHandler.h
src/packetHandler/auth/: cphAuthEnterWorld.cpp  cphAuthEnterWorld.h  cphAuthHello.cpp  cphAuthHello.h  cphAuthLogin.cpp  cphAuthLogin.h
src/packetHandler/dev/: cphDevSetPoint.cpp  cphDevSetPoint.h
src/packetHandler/town/: cphTownMove.cpp  cphTownMove.h
src/sample/: libevent.cpp
src/sql/: authDb.cpp  authDb.h  authDbDataType.h  dbConnPool.cpp  dbConnPool.h  userDb.cpp  userDb.h  userDbDataType.h
src/sqlLib/: connPool.cpp  connPool.h  connection.cpp  connection.h  error.cpp  error.h  global.h  transaction.cpp  transaction.h
src/util/: CMakeLists.txt  jsonUtil.cpp  jsonUtil.h  lacUtil.cpp  lacUtil.h  vector3.h
